<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="what_country">What country does this flag belong to?</string>
    <string name="submit">Submit</string>
    <string name="result">RESULT</string>
    <string name="congratulation">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="app_name2">countries</string>
</resources>